add packages for DKSO-64 0.1

--- a/package/netping/dkso_64/Makefile
+++ b/package/netping/dkso_64/Makefile
@@ -2,7 +2,7 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=dkso_64
+PKG_NAME:="dkso_64"
 PKG_VERSION:=64.0.1
 PKG_MAINTAINER:=Mikhail Sadikov <info@netping.ru>
 PKG_RELEASE:=1
@@ -21,12 +21,13 @@ define Package/dkso_64
 endef
 
 define Package/dkso_64/description
- dkso_64 - identification package for the image firmware version and hardware platform
+ identification package for the image firmware version and hardware platform
 endef
 
 define Build/Prepare
 	$(CP) opkg-keys/18e86236d041de40 $(PKG_BUILD_DIR)/
 	$(CP) opkg-keys/Makefile $(PKG_BUILD_DIR)/
+	$(CP) customfeeds.conf $(PKG_BUILD_DIR)/
 endef
 
 Build/Compile=
@@ -34,6 +35,8 @@ Build/Compile=
 define Package/dkso_64/install
 	$(INSTALL_DIR) $(1)/etc/opkg/keys/
 	$(INSTALL_DATA) $(PKG_BUILD_DIR)/18e86236d041de40 $(1)/etc/opkg/keys/
+	$(INSTALL_DIR) $(1)/etc/opkg/
+	cp $(PKG_BUILD_DIR)/customfeeds.conf $(1)/etc/opkg/
 endef
 
 $(eval $(call BuildPackage,dkso_64))
